Change index manager to use filechannel mapped index files on windows when java > 8 Only use cleaner hack on windows (with java8), on other platforms it is not needed as they do not keep lock on file.